IPython interface refactored as package. Very short Interface.ipynb notebook.

--- a/Interface.ipynb
+++ b/Interface.ipynb
@@ -2,48 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "b3647941-d3c0-42df-ad8f-23b032250801",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "%%% Set up injection <Common state> {'drive_mount', 'drive_folder', 'environment'} -> <Common state> base_path\n",
-      "%%% Set up injection <Common state> {'base_path'} -> <Common state> cases\n",
-      "%%% Set up injection <Common state> {'cases'} -> <Common state> case\n",
-      "%%% Set up injection <Common state> {'case', 'base_path'} -> <Common state> case_path\n",
-      "%%% Set up injection <Common state> {'case', 'case_path'} -> HTML(value='') value\n",
-      "%%% Set up injection <Common state> {'case', 'case_path'} -> HTML(value='') value\n",
-      "%%% Set up injection <Common state> {'case', 'case_path'} -> HTML(value='') value\n",
-      "%%% Set up injection <Common state> {'case', 'case_path'} -> Button(layout=Layout(width='auto'), style=ButtonStyle()) description\n",
-      "%%% Set up injection <Common state> {'case', 'case_path'} -> Button(layout=Layout(width='auto'), style=ButtonStyle()) disabled\n",
-      "%%% Set up injection <Common state> {'case', 'case_path'} -> Button(layout=Layout(width='auto'), style=ButtonStyle()) button_style\n",
-      "%%% Setup on_click ((<Common state>, 'case_path'),)\n",
-      "%%% Set up injection <Common state> {'case', 'case_path'} -> Button(layout=Layout(width='auto'), style=ButtonStyle()) description\n",
-      "%%% Set up injection <Common state> {'case', 'case_path'} -> Button(layout=Layout(width='auto'), style=ButtonStyle()) disabled\n",
-      "%%% Set up injection <Common state> {'case', 'case_path'} -> Button(layout=Layout(width='auto'), style=ButtonStyle()) button_style\n",
-      "%%% Setup on_click ((<Common state>, 'case_path'),)\n",
-      "%%% Set up injection <Common state> {'case', 'case_path'} -> Button(layout=Layout(width='auto'), style=ButtonStyle()) description\n",
-      "%%% Set up injection <Common state> {'case', 'case_path'} -> Button(layout=Layout(width='auto'), style=ButtonStyle()) disabled\n",
-      "%%% Set up injection <Common state> {'case', 'case_path'} -> Button(layout=Layout(width='auto'), style=ButtonStyle()) button_style\n",
-      "%%% Setup on_click ((<Common state>, 'case_path'),)\n",
-      "%%% Set up reaction <Common state> {'case_path'} -> func\n",
-      "%%% Invalid selection: value not found\n",
-      "%%% Invalid selection: value not found\n",
-      "%%% Invalid selection: value not found\n",
-      "%%% Invalid selection: value not found\n",
-      "%%% Invalid selection: value not found\n",
-      "%%% Invalid selection: value not found\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "85d3037a49b2418e9803f2f98840ab9c",
+       "model_id": "d04a1b6745ba4ead9a82380c8e63c33c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -53,52 +21,25 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_3425/36312007.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     55\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     56\u001b[0m \u001b[0mdisplay\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minterface\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 57\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     58\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     59\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: "
-     ]
     }
    ],
    "source": [
-    "import argparse\n",
-    "from functools import partial\n",
-    "from importlib import reload\n",
-    "from ipywidgets import Text, Label, Dropdown, Tab, HTML, HBox, VBox, Button, Layout\n",
-    "from pathlib import Path\n",
+    "try:\n",
+    "    import os\n",
+    "    from dotenv import load_dotenv\n",
+    "    load_dotenv()\n",
+    "    environment = os.getenv(\"LIVER_ENVIRONMENT\", \"colab\")\n",
+    "except:\n",
+    "    environment = \"colab\"\n",
     "\n",
-    "import dataset.ndarray\n",
-    "import interface as interface_module\n",
-    "reload(interface_module)\n",
-    "set_state = interface_module.set_state\n",
-    "import scripts\n",
-    "reload(scripts)\n",
-    "\n",
-    "import os\n",
-    "from dotenv import load_dotenv\n",
-    "\n",
-    "load_dotenv()\n",
-    "\n",
-    "################################ Interface ###################################\n",
-    "\n",
-    "cs = interface_module.common_state\n",
-    "set_state(cs, \"environment\", os.getenv(\"LIVER_ENVIRONMENT\", \"colab\"))\n",
-    "interface, tv_output = interface_module.build_interface(cs)\n",
-    "\n",
-    "if cs.environment == \"local\":\n",
-    "    set_state(cs, \"drive_mount\", value=\"/mnt/chromeos/MyFiles\")\n",
-    "    set_state(cs, \"drive_folder\", value=\"Downloads\")\n",
-    "elif cs.environment == \"colab\":\n",
+    "if environment == \"local\":\n",
+    "    drive_mount=\"/mnt/chromeos/MyFiles\"\n",
+    "    drive_folder=\"Downloads\"\n",
+    "elif environment == \"colab\":\n",
     "    from google.colab import drive\n",
     "    drive.mount(\"/content/drive\")\n",
-    "    set_state(cs, \"drive_mount\", value=\"/content/drive\")\n",
-    "    set_state(cs, \"drive_folder\", value=\"COLAB\")\n",
+    "    drive_mount=\"/content/drive\"\n",
+    "    drive_folder=\"COLAB\"\n",
     "    display(HTML('''<link rel=\"stylesheet\" href=\"https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css\"> '''))\n",
     "    \n",
     "    %cd /content\n",
@@ -121,82 +62,26 @@
     "    !cmake -D CMAKE_BUILD_TYPE=Release /content/nifty_source\n",
     "    !make\n",
     "    !make install\n",
+    "    \n",
+    "import argparse\n",
+    "from functools import partial\n",
+    "from importlib import reload\n",
+    "from ipywidgets import Text, Label, Dropdown, Tab, HTML, HBox, VBox, Button, Layout\n",
+    "from pathlib import Path\n",
     "\n",
-    "display(interface)\n",
+    "import dataset.ndarray\n",
+    "import components.card_console\n",
+    "import components.commonstate\n",
+    "import components\n",
+    "import scripts\n",
     "\n",
-    "################################### Tests ####################################\n",
+    "state, tab = components.get_new_interface()\n",
     "\n",
+    "state.environment = environment\n",
+    "state.drive_folder = drive_folder\n",
+    "state.drive_mount = drive_mount\n",
     "\n",
-    "\n",
-    "# input__drive_mount = Text(description=\"Drive mount:\")\n",
-    "# interface.identity(\"drive_mount\", input__drive_mount)\n",
-    "\n",
-    "\n",
-    "# mount_from_colab = Button(button_style='info', description=\"Mount from colab\", layout=Layout(width='auto'))\n",
-    "\n",
-    "# @interface.on_click(mount_from_colab, \"drive_mount\")\n",
-    "# def callback(*, base_path):\n",
-    "#     !pytest test_package/test_ndarray.py\n",
-    "\n",
-    "# test_ndarray = Button(button_style='info', description=\"Test ndarray\", layout=Layout(width='auto'))\n",
-    "\n",
-    "# @interface.on_click(test_ndarray, \"base_path\")\n",
-    "# def callback(*, base_path):\n",
-    "#     !pytest test_package/test_ndarray.py\n",
-    "\n",
-    "# test_path_explorer = Button(button_style='info', description=\"Test path explorer\", layout=Layout(width='auto'))\n",
-    "\n",
-    "# @interface.on_click(test_path_explorer, \"base_path\")\n",
-    "# def callback(*, base_path):\n",
-    "#     !pytest test_package/test_path_explorer.py\n",
-    "\n",
-    "# test_preprocessing = Button(button_style='info', description=\"Test preprocessing\", layout=Layout(width='auto'))\n",
-    "\n",
-    "# @interface.on_click(test_preprocessing, \"base_path\")\n",
-    "# def callback(*, base_path):\n",
-    "#     !pytest test_package/test_preprocessing.py\n",
-    "\n",
-    "# test_slicing = Button(button_style='info', description=\"test_slicing\", layout=Layout(width='auto'))\n",
-    "\n",
-    "# @interface.on_click(test_slicing, \"base_path\")\n",
-    "# def callback(*, base_path):\n",
-    "#     !pytest test_package/test_slicing.py\n",
-    "\n",
-    "##############################################################################\n",
-    "\n",
-    "display(interface)\n",
-    "interface.drive_folder = \"Downloads\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cff7b6c9-38a4-439a-8c38-53adf7c7efae",
-   "metadata": {},
-   "source": [
-    "# Other stuff"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "1aa5b3df-2c71-4156-a172-adab70450f0a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@complex_reaction((content_holder, \"content\"), (z_slider, \"value\"))\n",
-    "def func(content, z):\n",
-    "    seaborn_image.imgplot(content[..., z].T, cbar=False)\n",
-    "    tv_output.append_display_data(HTML(\"ZOME!\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "4c765f9f-c24a-4aa1-be7a-b3a73e5ccae9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "z.max = 200"
+    "display(tab)"
    ]
   }
  ],
