Weird thing with image orientations. Trying to understand.

--- a/Interface.ipynb
+++ b/Interface.ipynb
@@ -9,21 +9,16 @@
    },
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d04a1b6745ba4ead9a82380c8e63c33c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Tab(children=(HBox(children=(VBox(children=(HTML(value='<h3>Set these variables</h3>'), Text(value='Downloads'…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "UsageError: Line magic function `%%capture` not found.\n"
+     ]
     }
    ],
    "source": [
+    "#@title # Liver interface\n",
+    "%%capture --no-display \n",
     "try:\n",
     "    import os\n",
     "    from dotenv import load_dotenv\n",
@@ -40,7 +35,6 @@
     "    drive.mount(\"/content/drive\")\n",
     "    drive_mount=\"/content/drive\"\n",
     "    drive_folder=\"COLAB\"\n",
-    "    display(HTML('''<link rel=\"stylesheet\" href=\"https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css\"> '''))\n",
     "    \n",
     "    %cd /content\n",
     "    !apt install elastix libgdcm-tools\n",
@@ -52,7 +46,7 @@
     "    !git fetch origin july_rewrite \n",
     "    !git checkout july_rewrite\n",
     "    !git pull origin july_rewrite\n",
-    "    !pip install -r requirements.txt\n",
+    "    !pip install -r hard_requirements.txt\n",
     "   \n",
     "    ## Niftyreg\n",
     "    %cd /content\n",
@@ -81,8 +75,17 @@
     "state.drive_folder = drive_folder\n",
     "state.drive_mount = drive_mount\n",
     "\n",
+    "display(HTML('''<link rel=\"stylesheet\" href=\"https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css\"> '''))\n",
     "display(tab)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eebb1660-aac4-4aa7-8c85-0c242bc32d80",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
