April's model for prediction.

--- a/Interface.ipynb
+++ b/Interface.ipynb
@@ -9,11 +9,32 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "UsageError: Line magic function `%%capture` not found.\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3873bad5efb84da2a4583f420e438098",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HTML(value='<link rel=\"stylesheet\" href=\"https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesom…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c79ef5b32882459d946042b20d73ad89",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Tab(children=(HBox(children=(VBox(children=(HTML(value='<h3>Set these variables</h3>'), Text(value='Downloads'…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -46,7 +67,7 @@
     "    !git fetch origin july_rewrite \n",
     "    !git checkout july_rewrite\n",
     "    !git pull origin july_rewrite\n",
-    "    !pip install -r hard_requirements.txt\n",
+    "    !pip install -r requirements.txt\n",
     "   \n",
     "    ## Niftyreg\n",
     "    %cd /content\n",
@@ -56,6 +77,8 @@
     "    !cmake -D CMAKE_BUILD_TYPE=Release /content/nifty_source\n",
     "    !make\n",
     "    !make install\n",
+    "\n",
+    "%cd /content/liver\n",
     "    \n",
     "import argparse\n",
     "from functools import partial\n",
@@ -78,14 +101,6 @@
     "display(HTML('''<link rel=\"stylesheet\" href=\"https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css\"> '''))\n",
     "display(tab)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eebb1660-aac4-4aa7-8c85-0c242bc32d80",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
