July evaluation. Fixed version for click and debugpy

--- a/Interface.ipynb
+++ b/Interface.ipynb
@@ -2,16 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "b3647941-d3c0-42df-ad8f-23b032250801",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Errno 2] No such file or directory: '/content/liver'\n",
+      "/home/yamatteo/liver\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3873bad5efb84da2a4583f420e438098",
+       "model_id": "060187ef05714bbcb21a1e64579b893c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -25,7 +33,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c79ef5b32882459d946042b20d73ad89",
+       "model_id": "80cad04e43ed42b0a3e09579de0c2724",
        "version_major": 2,
        "version_minor": 0
       },
@@ -78,7 +86,7 @@
     "    !make\n",
     "    !make install\n",
     "\n",
-    "%cd /content/liver\n",
+    "    %cd /content/liver\n",
     "    \n",
     "import argparse\n",
     "from functools import partial\n",
