Image are oriented correctly also in colab. Buttons on separate module.

--- a/Interface.ipynb
+++ b/Interface.ipynb
@@ -2,43 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "b3647941-d3c0-42df-ad8f-23b032250801",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[Errno 2] No such file or directory: '/content/liver'\n",
-      "/home/yamatteo/liver\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "060187ef05714bbcb21a1e64579b893c",
+       "model_id": "f6fc5a9a7e61454ea104702320e3fb3a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HTML(value='<link rel=\"stylesheet\" href=\"https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesom…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "80cad04e43ed42b0a3e09579de0c2724",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Tab(children=(HBox(children=(VBox(children=(HTML(value='<h3>Set these variables</h3>'), Text(value='Downloads'…"
+       "Tab(children=(HBox(children=(VBox(children=(HTML(value='<h3>Set these variables</h3>'), Text(value='COLAB', de…"
       ]
      },
      "metadata": {},
@@ -47,7 +25,8 @@
    ],
    "source": [
     "#@title # Liver interface\n",
-    "%%capture --no-display \n",
+    "#@markdown Just run this single cell. After some minutes you'll be able to use the interface for everything else.\n",
+    "# %%capture --no-display \n",
     "try:\n",
     "    import os\n",
     "    from dotenv import load_dotenv\n",
@@ -57,9 +36,11 @@
     "    environment = \"colab\"\n",
     "\n",
     "if environment == \"local\":\n",
-    "    drive_mount=\"/mnt/chromeos/MyFiles\"\n",
-    "    drive_folder=\"Downloads\"\n",
+    "    # drive_mount=\"/mnt/chromeos/MyFiles\"\n",
+    "    drive_mount = \"/mnt/chromeos/GoogleDrive\"\n",
+    "    drive_folder=\"COLAB\"\n",
     "elif environment == \"colab\":\n",
+    "    %%capture --no-display \n",
     "    from google.colab import drive\n",
     "    drive.mount(\"/content/drive\")\n",
     "    drive_mount=\"/content/drive\"\n",
@@ -78,13 +59,13 @@
     "    !pip install -r requirements.txt\n",
     "   \n",
     "    ## Niftyreg\n",
-    "    %cd /content\n",
-    "    !git clone https://github.com/KCL-BMEIS/niftyreg nifty_source\n",
-    "    !mkdir /content/nifty_build\n",
-    "    %cd /content/nifty_build\n",
-    "    !cmake -D CMAKE_BUILD_TYPE=Release /content/nifty_source\n",
-    "    !make\n",
-    "    !make install\n",
+    "    # %cd /content\n",
+    "    # !git clone https://github.com/KCL-BMEIS/niftyreg nifty_source\n",
+    "    # !mkdir /content/nifty_build\n",
+    "    # %cd /content/nifty_build\n",
+    "    # !cmake -D CMAKE_BUILD_TYPE=Release /content/nifty_source\n",
+    "    # !make\n",
+    "    # !make install\n",
     "\n",
     "    %cd /content/liver\n",
     "    \n",
@@ -106,7 +87,7 @@
     "state.drive_folder = drive_folder\n",
     "state.drive_mount = drive_mount\n",
     "\n",
-    "display(HTML('''<link rel=\"stylesheet\" href=\"https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css\"> '''))\n",
+    "# display(HTML('''<link rel=\"stylesheet\" href=\"https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css\"> '''))\n",
     "display(tab)"
    ]
   }
