Evaluate april's model.

--- a/Interface.ipynb
+++ b/Interface.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "492683a0-6fb8-4a12-a6ca-d227a3fb6fc9",
+   "metadata": {},
+   "source": [
+    "# Liver interface\n",
+    "\n",
+    "Just run this single cell. After some minutes you'll be able to use the generated interface for everything else."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "b3647941-d3c0-42df-ad8f-23b032250801",
@@ -11,7 +21,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f6fc5a9a7e61454ea104702320e3fb3a",
+       "model_id": "f948c60214c14ecd898ae8fa294f55f7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -24,9 +34,7 @@
     }
    ],
    "source": [
-    "#@title # Liver interface\n",
-    "#@markdown Just run this single cell. After some minutes you'll be able to use the interface for everything else.\n",
-    "# %%capture --no-display \n",
+    "#@title\n",
     "try:\n",
     "    import os\n",
     "    from dotenv import load_dotenv\n",
