--- a/Interface.ipynb
+++ b/Interface.ipynb
@@ -21,7 +21,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f948c60214c14ecd898ae8fa294f55f7",
+       "model_id": "fe7efa20a98d412ab3393e96c4af8fc5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -35,24 +35,20 @@
    ],
    "source": [
     "#@title\n",
+    "%%capture --no-display \n",
+    "import os\n",
     "try:\n",
-    "    import os\n",
     "    from dotenv import load_dotenv\n",
     "    load_dotenv()\n",
+    "finally:\n",
     "    environment = os.getenv(\"LIVER_ENVIRONMENT\", \"colab\")\n",
-    "except:\n",
-    "    environment = \"colab\"\n",
     "\n",
     "if environment == \"local\":\n",
-    "    # drive_mount=\"/mnt/chromeos/MyFiles\"\n",
     "    drive_mount = \"/mnt/chromeos/GoogleDrive\"\n",
-    "    drive_folder=\"COLAB\"\n",
     "elif environment == \"colab\":\n",
-    "    %%capture --no-display \n",
     "    from google.colab import drive\n",
     "    drive.mount(\"/content/drive\")\n",
     "    drive_mount=\"/content/drive\"\n",
-    "    drive_folder=\"COLAB\"\n",
     "    \n",
     "    %cd /content\n",
     "    !apt install elastix libgdcm-tools\n",
@@ -65,37 +61,15 @@
     "    !git checkout july_rewrite\n",
     "    !git pull origin july_rewrite\n",
     "    !pip install -r requirements.txt\n",
-    "   \n",
-    "    ## Niftyreg\n",
-    "    # %cd /content\n",
-    "    # !git clone https://github.com/KCL-BMEIS/niftyreg nifty_source\n",
-    "    # !mkdir /content/nifty_build\n",
-    "    # %cd /content/nifty_build\n",
-    "    # !cmake -D CMAKE_BUILD_TYPE=Release /content/nifty_source\n",
-    "    # !make\n",
-    "    # !make install\n",
-    "\n",
-    "    %cd /content/liver\n",
     "    \n",
-    "import argparse\n",
-    "from functools import partial\n",
-    "from importlib import reload\n",
-    "from ipywidgets import Text, Label, Dropdown, Tab, HTML, HBox, VBox, Button, Layout\n",
-    "from pathlib import Path\n",
-    "\n",
-    "import dataset.ndarray\n",
-    "import components.card_console\n",
-    "import components.commonstate\n",
     "import components\n",
-    "import scripts\n",
     "\n",
     "state, tab = components.get_new_interface()\n",
     "\n",
     "state.environment = environment\n",
-    "state.drive_folder = drive_folder\n",
+    "state.drive_folder = \"COLAB\"\n",
     "state.drive_mount = drive_mount\n",
     "\n",
-    "# display(HTML('''<link rel=\"stylesheet\" href=\"https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css\"> '''))\n",
     "display(tab)"
    ]
   }
