Debug april's recursion

--- a/Interface.ipynb
+++ b/Interface.ipynb
@@ -40,8 +40,8 @@
     "try:\n",
     "    from dotenv import load_dotenv\n",
     "    load_dotenv()\n",
-    "finally:\n",
-    "    environment = os.getenv(\"LIVER_ENVIRONMENT\", \"colab\")\n",
+    "except: pass\n",
+    "environment = os.getenv(\"LIVER_ENVIRONMENT\", \"colab\")\n",
     "\n",
     "if environment == \"local\":\n",
     "    drive_mount = \"/mnt/chromeos/GoogleDrive\"\n",
@@ -53,7 +53,7 @@
     "    %cd /content\n",
     "    !apt install elastix libgdcm-tools\n",
     "\n",
-    "    !git clone https://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@github.com/yamatteo/liver.git /content/liver\n",
+    "    !git clone https://github.com/yamatteo/liver.git /content/liver\n",
     "    !git clone https://github.com/AIM-Harvard/pyradiomics.git /content/radiomics\n",
     "\n",
     "    %cd /content/liver \n",
