Hunet as trainable and applicable model.

--- a/Interface.ipynb
+++ b/Interface.ipynb
@@ -72,6 +72,55 @@
     "\n",
     "display(tab)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1d49d45-ac02-4dd2-a703-cd65cc35481b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from importlib import reload\n",
+    "from pathlib import Path\n",
+    "\n",
+    "import torch\n",
+    "\n",
+    "import model.hunet, model.block, model.data\n",
+    "from model.hunet import HunetNetwork"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d15298cc-abc0-48a1-9f40-6b2a73719735",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reload(model.block)\n",
+    "reload(model.data)\n",
+    "reload(model.hunet)\n",
+    "\n",
+    "dataset_path = Path(\"/data\")\n",
+    "dataset_path.mkdir(exist_ok=True)\n",
+    "model.data.store_dataset(Path(\"/content/drive/MyDrive\") / \"COLAB\", dataset_path, slice_shape=(512, 512, 40))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf335545-11b3-4ca4-87c7-bf0a0b77e8fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reload(model.block)\n",
+    "reload(model.data)\n",
+    "reload(model.hunet)\n",
+    "\n",
+    "dataset_path = Path(\"/data\")\n",
+    "device = torch.device(\"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
+    "nw = model.hunet.HunetNetwork(dataset_path, device)\n",
+    "nw.train()"
+   ]
   }
  ],
  "metadata": {
