Hunet as trainable and applicable model.

--- a/Interface.ipynb
+++ b/Interface.ipynb
@@ -86,7 +86,9 @@
     "import torch\n",
     "\n",
     "import model.hunet, model.block, model.data\n",
-    "from model.hunet import HunetNetwork"
+    "import report\n",
+    "from model.hunet import HunetNetwork\n",
+    "!wandb login 6e44b780601adbcb29c5322b462b5da80078222e"
    ]
   },
   {
@@ -112,6 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "reload(report)\n",
     "reload(model.block)\n",
     "reload(model.data)\n",
     "reload(model.hunet)\n",
@@ -119,7 +122,23 @@
     "dataset_path = Path(\"/data\")\n",
     "device = torch.device(\"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
     "nw = model.hunet.HunetNetwork(dataset_path, device)\n",
-    "nw.train()"
+    "models_path = Path(\"/content/liver/model/saved_models\")\n",
+    "nw.train(models_path=models_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ecdf7b71-ebcb-41c4-b35a-3a7845009b33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !git status\n",
+    "# !git config --global user.email \"yamatteo@gmail.com\"\n",
+    "# !git config --global user.name \"Matteo Bortolotto\"\n",
+    "# !git add .\n",
+    "# !git commit -m \"debug\"\n",
+    "# !git push https://github.com/yamatteo/liver.git"
    ]
   }
  ],
