Back to regular UNet. Store 441 dataset.

--- a/Interface.ipynb
+++ b/Interface.ipynb
@@ -148,8 +148,8 @@
     "dataset_path.mkdir(exist_ok=True)\n",
     "models_path.mkdir(exist_ok=True)\n",
     "device = torch.device(\"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
-    "nw = model.hunet.HunetNetwork.init_0(dataset_path, device)\n",
-    "nw.store_dataset(source_path, dataset_path)\n",
+    "nw = model.hunet.HunetNetwork.init_0(dataset_path=dataset_path, source_path=source_path, store=False, device=device)\n",
+    "\n",
     "nw.train(n=0, epochs=40, models_path=models_path)"
    ]
   },
@@ -165,7 +165,7 @@
     "# !git config --global user.name \"Matteo Bortolotto\"\n",
     "# !git add .\n",
     "# !git commit -m \"debug\"\n",
-    "# !git push https://github.com/yamatteo/liver.git"
+    "# !git push https://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@github.com/yamatteo/liver.git"
    ]
   }
  ],
