Newmodels training routines. Debug.

--- a/Interface.ipynb
+++ b/Interface.ipynb
@@ -93,9 +93,8 @@
     "\n",
     "import torch\n",
     "\n",
-    "import model.hunet, model.block, model.data\n",
+    "import newmodel\n",
     "import report\n",
-    "from model.hunet import HunetNetwork\n",
     "!wandb login 6e44b780601adbcb29c5322b462b5da80078222e"
    ]
   },
@@ -106,13 +105,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reload(model.block)\n",
-    "reload(model.data)\n",
-    "reload(model.hunet)\n",
-    "\n",
+    "reload(newmodel)\n",
+    "# !rm -r /data\n",
     "dataset_path = Path(\"/data\")\n",
     "dataset_path.mkdir(exist_ok=True)\n",
-    "model.data.store_dataset(Path(\"/content/drive/MyDrive\") / \"COLAB\", dataset_path, slice_shape=(512, 512, 40))\n"
+    "# newmodel.store_441_dataset(Path(\"/content/drive/MyDrive\") / \"COLAB\", dataset_path, slice_shape=(512, 512, 32))"
    ]
   },
   {
@@ -137,20 +134,17 @@
     }
    ],
    "source": [
-    "reload(report)\n",
-    "reload(model.block)\n",
-    "reload(model.data)\n",
-    "reload(model.hunet)\n",
+    "# reload(report)\n",
+    "reload(newmodel)\n",
     "\n",
     "source_path = Path(\"/content/drive/MyDrive\") / \"COLAB\"\n",
     "dataset_path = Path(\"/data\")\n",
-    "models_path = Path(\"/content/liver/model/saved_models\")\n",
+    "models_path = Path(\"/content/liver/newmodel/saved_models\")\n",
     "dataset_path.mkdir(exist_ok=True)\n",
     "models_path.mkdir(exist_ok=True)\n",
     "device = torch.device(\"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
-    "nw = model.hunet.HunetNetwork.init_0(dataset_path=dataset_path, source_path=source_path, store=False, device=device)\n",
-    "\n",
-    "nw.train(n=0, epochs=40, models_path=models_path)"
+    "setup = newmodel.setup_train(dataset_path, models_path=models_path, device=device, batch_size=4)\n",
+    "newmodel.train(setup, epochs=40, models_path = models_path)"
    ]
   },
   {
@@ -160,12 +154,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# %cd /content/liver\n",
     "# !git status\n",
     "# !git config --global user.email \"yamatteo@gmail.com\"\n",
     "# !git config --global user.name \"Matteo Bortolotto\"\n",
     "# !git add .\n",
     "# !git commit -m \"debug\"\n",
-    "# !git push https://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@github.com/yamatteo/liver.git"
+    "# !git push https://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@github.com/yamatteo/liver.git"
    ]
   }
  ],
