Using weighted loss.

--- a/Interface.ipynb
+++ b/Interface.ipynb
@@ -45,6 +45,15 @@
     "\n",
     "if environment == \"local\":\n",
     "    drive_mount = \"/mnt/chromeos/GoogleDrive\"\n",
+    "elif environment == \"gce\":\n",
+    "    from google.colab import drive\n",
+    "    drive_mount=\"/content/drive\"\n",
+    "\n",
+    "    %cd /content/liver \n",
+    "    !git fetch origin july_rewrite \n",
+    "    !git checkout july_rewrite\n",
+    "    !git pull origin july_rewrite\n",
+    "    !pip install -r requirements.txt\n",
     "elif environment == \"colab\":\n",
     "    from google.colab import drive\n",
     "    drive.mount(\"/content/drive\")\n",
