--- a/Interface.ipynb
+++ b/Interface.ipynb
@@ -152,8 +152,17 @@
     "dataset_path.mkdir(exist_ok=True)\n",
     "models_path.mkdir(exist_ok=True)\n",
     "device = torch.device(\"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
-    "setup = newmodel.setup_train(dataset_path, models_path=models_path, device=device, batch_size=4)\n",
-    "newmodel.train(setup, epochs=40, models_path = models_path)"
+    "setup = newmodel.setup_train(\n",
+    "    dataset_path,\n",
+    "    models_path=models_path,\n",
+    "    model_name=\"none\",\n",
+    "    device=device,\n",
+    "    batch_size=4,\n",
+    "    \n",
+    "    channels=[4, 64, 64, 64],\n",
+    "    down_normalization=\"instance\",\n",
+    ")\n",
+    "newmodel.train(setup, epochs=401, models_path = models_path)"
    ]
   },
   {
