Buffer dataset, again?

--- a/Interface.ipynb
+++ b/Interface.ipynb
@@ -155,13 +155,15 @@
     "setup = newmodel.setup_train(\n",
     "    dataset_path,\n",
     "    models_path=models_path,\n",
-    "    model_name=\"none\",\n",
+    "    model_name=\"checkpoint060.pth\",\n",
     "    device=device,\n",
     "    batch_size=4,\n",
     "    \n",
     "    channels=[4, 64, 64, 64],\n",
     "    down_normalization=\"instance\",\n",
     ")\n",
+    "setup.model.set_momentum = 0.1\n",
+    "\n",
     "newmodel.train(setup, epochs=401, models_path = models_path)"
    ]
   },
