Buffer dataset, smaller pieces.

--- a/Interface.ipynb
+++ b/Interface.ipynb
@@ -114,11 +114,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reload(newmodel)\n",
     "# !rm -r /data\n",
-    "dataset_path = Path(\"/data\")\n",
-    "dataset_path.mkdir(exist_ok=True)\n",
-    "# newmodel.store_441_dataset(Path(\"/content/drive/MyDrive\") / \"COLAB\", dataset_path, slice_shape=(512, 512, 32))"
+    "# from pathlib import Path\n",
+    "# dataset_path = Path(\"/data\")\n",
+    "# dataset_path.mkdir(exist_ok=True)\n",
+    "# newmodel.store_441_dataset(Path(\"/content/drive/MyDrive\") / \"COLAB\", dataset_path, slice_shape=(128, 128, 32))"
    ]
   },
   {
@@ -143,9 +143,6 @@
     }
    ],
    "source": [
-    "# reload(report)\n",
-    "reload(newmodel)\n",
-    "\n",
     "source_path = Path(\"/content/drive/MyDrive\") / \"COLAB\"\n",
     "dataset_path = Path(\"/data\")\n",
     "models_path = Path(\"/content/liver/newmodel/saved_models\")\n",
@@ -154,17 +151,17 @@
     "device = torch.device(\"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
     "setup = newmodel.setup_train(\n",
     "    dataset_path,\n",
+    "    buffer_size=200,\n",
     "    models_path=models_path,\n",
-    "    model_name=\"checkpoint060.pth\",\n",
     "    device=device,\n",
-    "    batch_size=4,\n",
+    "    batch_size=50,\n",
     "    \n",
     "    channels=[4, 64, 64, 64],\n",
     "    down_normalization=\"instance\",\n",
     ")\n",
     "setup.model.set_momentum = 0.1\n",
-    "\n",
-    "newmodel.train(setup, epochs=401, models_path = models_path)"
+    "setup.train_dataset.fill()\n",
+    "newmodel.train(setup, epochs=401, resume_from=10, models_path = models_path, use_buffer=True)"
    ]
   },
   {
